--- a/scss/common.scss
+++ b/scss/common.scss
@@ -21,6 +21,7 @@
 // - List control
 // - Material icons
 // - Menu panel
+// - Modal
 // - Notification
 // - Post
 // - Reply
@@ -49,6 +50,7 @@
 @import 'common/list-control';
 @import 'common/material-icons';
 @import 'common/menu-panel';
+@import 'common/modal';
 @import 'common/notification';
 @import 'common/post';
 @import 'common/reply';
