--- a/common/common.scss
+++ b/common/common.scss
@@ -3737,10 +3737,15 @@ nav.post-controls .show-replies i {
           flex-wrap: wrap;
   margin-bottom: 16px;
   padding: 0;
+  width: 698px;
 }
 #topic-footer-buttons div > button.btn,
 #topic-footer-buttons span > button.btn,
 #topic-footer-buttons > button.btn {
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   margin: 0 8px 8px 0;
 }
 #topic-footer-buttons p {
