--- a/scss/common.scss
+++ b/scss/common.scss
@@ -22,7 +22,9 @@
 // - Material icons
 // - Menu panel
 // - Modal
+//   - Edit topic status update
 // - Notification
+// - Picker
 // - Post
 // - Reply
 // - Share
@@ -51,7 +53,9 @@
 @import 'common/material-icons';
 @import 'common/menu-panel';
 @import 'common/modal';
+@import 'common/modal-edit-topic';
 @import 'common/notification';
+@import 'common/picker';
 @import 'common/post';
 @import 'common/reply';
 @import 'common/share';
