--- a/common/common.scss
+++ b/common/common.scss
@@ -19,7 +19,7 @@
 }
 
 blockquote::after, blockquote::before, aside.quote .quote-controls .back::before,
-aside.quote .quote-controls .quote-other-topic::before, .d-editor-preview div.poll[data-poll-type='multiple'] li[data-poll-option-id]::before, .expanded-quote div.poll[data-poll-type='multiple'] li[data-poll-option-id]::before, .d-editor-preview div.poll li[data-poll-option-id]::before, .expanded-quote div.poll li[data-poll-option-id]::before, .select2-container a.select2-choice .select2-arrow b::before, .fa-angle-double-down::before, .fa-arrow-down::before, .fa-asterisk::before, .fa-bar-chart-o::before, .fa-bars::before, .fa-bold::before, .fa-bookmark::before, .fa-calendar::before, .fa-caret-down::before, .fa-caret-right::before, .fa-caret-up::before, .fa-certificate::before, .fa-check::before, .fa-check-square-o::before, .fa-chevron-down::before, .fa-chevron-up::before, .fa-circle::before, .fa-circle-o::before, .fa-clipboard::before, .fa-close::before, .fa-clock-o::before, .fa-code::before, .fa-copy::before, .fa-cog::before, .fa-comment::before, .fa-comment-o::before, .fa-compress::before, .fa-desktop::before, .fa-dot-circle-o::before, .fa-download::before, .fa-ellipsis-h::before, .fa-envelope::before, .fa-envelope-o::before, .fa-exclamation-circle::before, .fa-expand::before, .fa-eye::before, .fa-eye-slash::before, .fa-file-text-o::before, .fa-flag::before, .fa-folder::before, .fa-gear::before, .fa-header::before, .fa-heart::before, .fa-italic::before, .fa-link::before, .fa-list::before, .fa-list-ol::before, .fa-list-ul::before, .fa-lock::before, .fa-mail-forward::before, .fa-meh-o::before, .fa-minus::before, .fa-mobile::before, .fa-paint-brush::before, .fa-pencil::before, .fa-picture-o::before, .fa-play::before, .fa-plus::before, .fa-question-circle::before, .fa-quote-right::before, .fa-refresh::before, .fa-reply::before, .fa-rocket::before, .fa-search::before, .fa-shield::before, .fa-sign-out::before, .fa-smile-o::before, .fa-square-o::before, .fa-tasks::before, .fa-thumb-tack::before, .fa-times::before, .fa-times-circle::before, .fa-trash::before, .fa-trash-o::before, .fa-undo::before, .fa-unlock::before, .fa-unlock-alt::before, .fa-upload::before, .fa-user::before, .fa-user-plus::before, .fa-users::before, .fa-wrench::before, nav.post-controls button .read-icon::before, #reply-control.draft .toggler::before, #reply-control .grippie::before, #reply-control .toggler::before, #reply-control .toggle-preview::before {
+aside.quote .quote-controls .quote-other-topic::before, .d-editor-preview div.poll[data-poll-type='multiple'] li[data-poll-option-id]::before, .expanded-quote div.poll[data-poll-type='multiple'] li[data-poll-option-id]::before, .d-editor-preview div.poll li[data-poll-option-id]::before, .expanded-quote div.poll li[data-poll-option-id]::before, .select2-container a.select2-choice abbr::before, .select2-container a.select2-choice .select2-arrow b::before, .fa-angle-double-down::before, .fa-arrow-down::before, .fa-asterisk::before, .fa-bar-chart-o::before, .fa-bars::before, .fa-bed::before, .fa-bold::before, .fa-bookmark::before, .fa-briefcase::before, .fa-calendar::before, .fa-calendar-plus-o::before, .fa-caret-down::before, .fa-caret-right::before, .fa-caret-up::before, .fa-certificate::before, .fa-check::before, .fa-check-square-o::before, .fa-chevron-down::before, .fa-chevron-up::before, .fa-circle::before, .fa-circle-o::before, .fa-clipboard::before, .fa-close::before, .fa-clock-o::before, .fa-code::before, .fa-copy::before, .fa-cog::before, .fa-comment::before, .fa-comment-o::before, .fa-compress::before, .fa-desktop::before, .fa-dot-circle-o::before, .fa-download::before, .fa-ellipsis-h::before, .fa-envelope::before, .fa-envelope-o::before, .fa-exclamation-circle::before, .fa-expand::before, .fa-eye::before, .fa-eye-slash::before, .fa-file-text-o::before, .fa-flag::before, .fa-folder::before, .fa-gear::before, .fa-header::before, .fa-heart::before, .fa-italic::before, .fa-link::before, .fa-list::before, .fa-list-ol::before, .fa-list-ul::before, .fa-lock::before, .fa-mail-forward::before, .fa-meh-o::before, .fa-minus::before, .fa-mobile::before, .fa-moon-o::before, .fa-paint-brush::before, .fa-pencil::before, .fa-picture-o::before, .fa-play::before, .fa-plus::before, .fa-question-circle::before, .fa-quote-right::before, .fa-refresh::before, .fa-reply::before, .fa-rocket::before, .fa-search::before, .fa-shield::before, .fa-sign-out::before, .fa-smile-o::before, .fa-square-o::before, .fa-sun-o::before, .fa-tasks::before, .fa-thumb-tack::before, .fa-times::before, .fa-times-circle::before, .fa-trash::before, .fa-trash-o::before, .fa-undo::before, .fa-unlock::before, .fa-unlock-alt::before, .fa-upload::before, .fa-user::before, .fa-user-plus::before, .fa-users::before, .fa-wrench::before, .pika-next::before, .pika-prev::before, nav.post-controls button .read-icon::before, #reply-control.draft .toggler::before, #reply-control .grippie::before, #reply-control .toggler::before, #reply-control .toggle-preview::before {
   font-family: 'Material Icons';
   -webkit-font-feature-settings: 'liga';
           font-feature-settings: 'liga';
@@ -366,6 +366,9 @@ div.poll .poll-buttons a,
 .select2-container a.select2-choice,
 .list-controls .category-breadcrumb li > a.badge-category,
 .modal-footer a,
+.pika-button,
+.pika-next,
+.pika-prev,
 nav.post-controls button,
 nav.post-controls .show-replies,
 .small-action button,
@@ -408,6 +411,9 @@ div.poll .poll-buttons a:focus,
 .select2-container a.select2-choice:focus,
 .list-controls .category-breadcrumb li > a.badge-category:focus,
 .modal-footer a:focus,
+.pika-button:focus,
+.pika-next:focus,
+.pika-prev:focus,
 nav.post-controls button:focus,
 nav.post-controls .show-replies:focus,
 .small-action button:focus,
@@ -430,6 +436,9 @@ nav.post-controls .show-replies:focus,
   .select2-container a.select2-choice:hover,
   .list-controls .category-breadcrumb li > a.badge-category:hover,
   .modal-footer a:hover,
+  .pika-button:hover,
+  .pika-next:hover,
+  .pika-prev:hover,
   nav.post-controls button:hover,
   nav.post-controls .show-replies:hover,
   .small-action button:hover,
@@ -452,6 +461,9 @@ div.poll .poll-buttons a:active,
 .select2-container a.select2-choice:active,
 .list-controls .category-breadcrumb li > a.badge-category:active,
 .modal-footer a:active,
+.pika-button:active,
+.pika-next:active,
+.pika-prev:active,
 nav.post-controls button:active,
 nav.post-controls .show-replies:active,
 .small-action button:active,
@@ -473,6 +485,9 @@ div.poll .poll-buttons a:focus,
 .select2-container a.select2-choice:focus,
 .list-controls .category-breadcrumb li > a.badge-category:focus,
 .modal-footer a:focus,
+.pika-button:focus,
+.pika-next:focus,
+.pika-prev:focus,
 nav.post-controls button:focus,
 nav.post-controls .show-replies:focus,
 .small-action button:focus,
@@ -493,6 +508,9 @@ div.poll .poll-buttons a[disabled],
 .select2-container a[disabled].select2-choice,
 .list-controls .category-breadcrumb li > a[disabled].badge-category,
 .modal-footer a[disabled],
+[disabled].pika-button,
+[disabled].pika-next,
+[disabled].pika-prev,
 nav.post-controls button[disabled],
 nav.post-controls [disabled].show-replies,
 .small-action button[disabled],
@@ -510,6 +528,9 @@ div.poll .poll-buttons a.disabled,
 .select2-container a.disabled.select2-choice,
 .list-controls .category-breadcrumb li > a.disabled.badge-category,
 .modal-footer a.disabled,
+.disabled.pika-button,
+.disabled.pika-next,
+.disabled.pika-prev,
 nav.post-controls button.disabled,
 nav.post-controls .disabled.show-replies,
 .small-action button.disabled,
@@ -531,6 +552,9 @@ div.poll .poll-buttons a.btn-danger,
 .select2-container a.btn-danger.select2-choice,
 .list-controls .category-breadcrumb li > a.btn-danger.badge-category,
 .modal-footer a.btn-danger,
+.btn-danger.pika-button,
+.btn-danger.pika-next,
+.btn-danger.pika-prev,
 nav.post-controls button.btn-danger,
 nav.post-controls .btn-danger.show-replies,
 .small-action button.btn-danger,
@@ -551,6 +575,9 @@ div.poll .poll-buttons a.btn-danger:focus,
 .select2-container a.btn-danger.select2-choice:focus,
 .list-controls .category-breadcrumb li > a.btn-danger.badge-category:focus,
 .modal-footer a.btn-danger:focus,
+.btn-danger.pika-button:focus,
+.btn-danger.pika-next:focus,
+.btn-danger.pika-prev:focus,
 nav.post-controls button.btn-danger:focus,
 nav.post-controls .btn-danger.show-replies:focus,
 .small-action button.btn-danger:focus,
@@ -572,6 +599,9 @@ nav.post-controls .btn-danger.show-replies:focus,
   .select2-container a.btn-danger.select2-choice:hover,
   .list-controls .category-breadcrumb li > a.btn-danger.badge-category:hover,
   .modal-footer a.btn-danger:hover,
+  .btn-danger.pika-button:hover,
+  .btn-danger.pika-next:hover,
+  .btn-danger.pika-prev:hover,
   nav.post-controls button.btn-danger:hover,
   nav.post-controls .btn-danger.show-replies:hover,
   .small-action button.btn-danger:hover,
@@ -593,6 +623,9 @@ div.poll .poll-buttons a.btn-primary,
 .select2-container a.btn-primary.select2-choice,
 .list-controls .category-breadcrumb li > a.btn-primary.badge-category,
 .modal-footer a.btn-primary,
+.btn-primary.pika-button,
+.btn-primary.pika-next,
+.btn-primary.pika-prev,
 nav.post-controls button.btn-primary,
 nav.post-controls .btn-primary.show-replies,
 .small-action button.btn-primary,
@@ -613,6 +646,9 @@ div.poll .poll-buttons a.btn-primary:focus,
 .select2-container a.btn-primary.select2-choice:focus,
 .list-controls .category-breadcrumb li > a.btn-primary.badge-category:focus,
 .modal-footer a.btn-primary:focus,
+.btn-primary.pika-button:focus,
+.btn-primary.pika-next:focus,
+.btn-primary.pika-prev:focus,
 nav.post-controls button.btn-primary:focus,
 nav.post-controls .btn-primary.show-replies:focus,
 .small-action button.btn-primary:focus,
@@ -634,6 +670,9 @@ nav.post-controls .btn-primary.show-replies:focus,
   .select2-container a.btn-primary.select2-choice:hover,
   .list-controls .category-breadcrumb li > a.btn-primary.badge-category:hover,
   .modal-footer a.btn-primary:hover,
+  .btn-primary.pika-button:hover,
+  .btn-primary.pika-next:hover,
+  .btn-primary.pika-prev:hover,
   nav.post-controls button.btn-primary:hover,
   nav.post-controls .btn-primary.show-replies:hover,
   .small-action button.btn-primary:hover,
@@ -1980,9 +2019,30 @@ div.ac-wrap input[type='text'][disabled]:focus, div.ac-wrap input[type='text'][r
   margin: 0 4px;
 }
 
+.auto-update-input-selector-datetime {
+  font-size: inherit;
+  margin-left: 4px;
+}
+
+.auto-update-input-selector-icons {
+  margin-right: 4px;
+}
+.select2-container a.select2-choice .auto-update-input-selector-icons + span {
+  display: block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 .select2-container {
   border: 0;
   border-radius: 0;
+}
+.select2-container.select2-allowclear a.select2-choice > .select2-chosen {
+  margin-right: 4px;
+}
+.select2-container.select2-allowclear a.select2-choice > .select2-chosen:empty {
+  display: none;
 }
 .select2-container.select2-container-active {
   -webkit-box-shadow: none;
@@ -2009,8 +2069,38 @@ div.ac-wrap input[type='text'][disabled]:focus, div.ac-wrap input[type='text'][r
   display: inline-flex;
   height: 36px;
 }
+.select2-container a.select2-choice abbr {
+  font-size: inherit !important;
+  line-height: inherit !important;
+  background-image: none;
+  height: auto;
+  margin-left: 4px;
+  -webkit-box-ordinal-group: 2;
+  -webkit-order: 1;
+      -ms-flex-order: 1;
+          order: 1;
+  position: relative;
+  top: auto;
+  right: auto;
+  width: auto;
+}
+.select2-container a.select2-choice abbr::before {
+  content: "close";
+}
 .select2-container a.select2-choice > .select2-chosen {
-  margin-right: 0;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-inline-box;
+  display: -webkit-inline-flex;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  height: 36px;
+  margin: -11px 4px -11px 0;
+}
+.select2-container a.select2-choice > .select2-chosen:empty {
+  display: none;
 }
 .select2-container a.select2-choice .select2-arrow {
   border-radius: 0;
@@ -2022,11 +2112,13 @@ div.ac-wrap input[type='text'][disabled]:focus, div.ac-wrap input[type='text'][r
   background-color: transparent;
   background-image: none;
   height: auto;
-  margin-left: 4px;
-  width: 14px;
 }
 .select2-container a.select2-choice .select2-arrow b::before {
   content: 'arrow_drop_down';
+}
+
+.select2-default {
+  color: $primary !important;
 }
 
 .select2-drop .category-desc,
@@ -2383,6 +2475,14 @@ ol.category-breadcrumb li + li {
   content: "menu";
 }
 
+.fa-bed {
+  font-size: inherit !important;
+  line-height: inherit !important;
+}
+.fa-bed::before {
+  content: "airline_seat_flat";
+}
+
 .fa-bold {
   font-size: inherit !important;
   line-height: inherit !important;
@@ -2399,11 +2499,27 @@ ol.category-breadcrumb li + li {
   content: "bookmark_border";
 }
 
+.fa-briefcase {
+  font-size: inherit !important;
+  line-height: inherit !important;
+}
+.fa-briefcase::before {
+  content: "work";
+}
+
 .fa-calendar {
   font-size: inherit !important;
   line-height: inherit !important;
 }
 .fa-calendar::before {
+  content: "event";
+}
+
+.fa-calendar-plus-o {
+  font-size: inherit !important;
+  line-height: inherit !important;
+}
+.fa-calendar-plus-o::before {
   content: "event";
 }
 
@@ -2767,6 +2883,14 @@ ol.category-breadcrumb li + li {
   content: "phone_iphone";
 }
 
+.fa-moon-o {
+  font-size: inherit !important;
+  line-height: inherit !important;
+}
+.fa-moon-o::before {
+  content: "brightness_3";
+}
+
 .fa-paint-brush {
   font-size: inherit !important;
   line-height: inherit !important;
@@ -2885,6 +3009,14 @@ ol.category-breadcrumb li + li {
 }
 .fa-square-o::before {
   content: "check_box_outline_blank";
+}
+
+.fa-sun-o {
+  font-size: inherit !important;
+  line-height: inherit !important;
+}
+.fa-sun-o::before {
+  content: "brightness_5";
 }
 
 .fa-tasks {
@@ -3408,6 +3540,39 @@ body .bootbox.modal .modal-footer a.btn-primary {
     opacity: 1;
   }
 }
+.edit-topic-timer-modal label {
+  margin-right: 8px;
+  margin-bottom: 0;
+}
+.edit-topic-timer-modal .auto-update-input .control-group {
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+.edit-topic-timer-modal .auto-update-input .control-group > .fa {
+  margin-right: 8px;
+}
+.edit-topic-timer-modal .auto-update-input .pika-single {
+  position: absolute !important;
+}
+.edit-topic-timer-modal .auto-update-input .topic-status-info h3 {
+  font-size: 14px;
+  font-weight: 400;
+  letter-spacing: 0;
+  line-height: 1.428571;
+}
+.edit-topic-timer-modal .auto-update-input .topic-status-info h3 > .fa {
+  margin-right: 8px;
+}
+.edit-topic-timer-modal .modal-body {
+  overflow: visible;
+}
+
 .alert {
   background-color: color-chooser(#424242, #ffffff);
   border: 0;
@@ -3430,6 +3595,156 @@ body .bootbox.modal .modal-footer a.btn-primary {
 
 .alert-bootstrap-mode {
   margin-bottom: 24px;
+}
+
+.change-timestamp {
+  max-height: none;
+  min-height: 0;
+}
+.change-timestamp .pika-single {
+  float: left;
+  position: static !important;
+}
+
+.date-picker {
+  text-align: left;
+  text-align: start;
+}
+
+.pika-button {
+  border-radius: 50%;
+  font-weight: normal;
+  padding-right: 0;
+  padding-left: 0;
+  text-align: center;
+  width: 36px;
+}
+.pika-button:hover {
+  background-color: color-chooser(rgba(204, 204, 204, 0.125), rgba(153, 153, 153, 0.2));
+  border-radius: 50%;
+  color: $primary;
+}
+.is-disabled .pika-button {
+  color: color-chooser(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.26));
+  opacity: 1;
+}
+.is-selected .pika-button {
+  border-radius: 50%;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  font-weight: normal;
+}
+.is-today .pika-button {
+  font-weight: normal;
+}
+
+.pika-label {
+  background-color: transparent;
+  font-weight: normal;
+  padding: 0 4px;
+}
+
+.pika-lendar {
+  border-radius: 2px;
+  margin: 0;
+  padding: 8px 8px;
+  width: 296px;
+}
+
+.pika-next,
+.pika-prev {
+  background-image: none;
+  height: 36px;
+  opacity: 1;
+  padding-right: 0;
+  padding-left: 0;
+  text-indent: 100%;
+  width: 36px;
+}
+.pika-next::before,
+.pika-prev::before {
+  position: absolute;
+  top: 11px;
+  left: 6px;
+  text-indent: 0;
+}
+.pika-next.is-disabled,
+.pika-prev.is-disabled {
+  color: color-chooser(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.26));
+  opacity: 1;
+}
+.pika-next.is-disabled:focus,
+.pika-prev.is-disabled:focus {
+  background-color: transparent;
+}
+@media (hover: hover) {
+  .pika-next.is-disabled:hover,
+  .pika-prev.is-disabled:hover {
+    background-color: transparent;
+  }
+}
+
+.pika-next {
+  font-size: inherit !important;
+  line-height: inherit !important;
+  margin-left: auto;
+}
+.pika-next::before {
+  content: "keyboard_arrow_right";
+}
+
+.pika-prev {
+  font-size: inherit !important;
+  line-height: inherit !important;
+  margin-right: auto;
+  -webkit-box-ordinal-group: 0;
+  -webkit-order: -1;
+      -ms-flex-order: -1;
+          order: -1;
+}
+.pika-prev::before {
+  content: "keyboard_arrow_left";
+}
+
+.pika-single {
+  background-color: color-chooser(#212121, #f5f5f5);
+  border: 0;
+  font-family: inherit;
+}
+.pika-single.is-bound {
+  background-color: color-chooser(#424242, #ffffff);
+  -webkit-box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12), 0 11px 15px -7px rgba(0, 0, 0, 0.4);
+          box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12), 0 11px 15px -7px rgba(0, 0, 0, 0.4);
+}
+
+.pika-table td,
+.pika-table th {
+  height: 40px;
+  vertical-align: middle;
+  width: 40px;
+}
+.pika-table td {
+  text-align: center;
+}
+.pika-table th {
+  color: color-chooser(rgba(255, 255, 255, 0.7), rgba(0, 0, 0, 0.54));
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 1;
+}
+.pika-table th abbr[title] {
+  text-decoration: none;
+}
+
+.pika-title {
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 nav.post-controls {
