--- a/scss/common/_form-select2.scss
+++ b/scss/common/_form-select2.scss
@@ -1,6 +1,34 @@
+.auto-update-input-selector-datetime {
+  font-size: inherit;
+  margin-left: $spacer-xs;
+}
+
+.auto-update-input-selector-icons {
+  margin-right: $spacer-xs;
+
+  + span {
+    .select2-container a.select2-choice & {
+      display: block;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
+  }
+}
+
 .select2-container {
   border: 0;
   border-radius: 0;
+
+  &.select2-allowclear {
+    a.select2-choice > .select2-chosen {
+      margin-right: $spacer-xs;
+
+      &:empty {
+        display: none;
+      }
+    }
+  }
 
   &.select2-container-active {
     box-shadow: none;
@@ -25,8 +53,28 @@
     display: inline-flex;
     height: $btn-height;
 
+    abbr {
+      @include material-icons('close');
+
+      background-image: none;
+      height: auto;
+      margin-left: $spacer-xs;
+      order: 1;
+      position: relative;
+      top: auto;
+      right: auto;
+      width: auto;
+    }
+
     > .select2-chosen {
-      margin-right: 0;
+      align-items: center;
+      display: inline-flex;
+      height: $btn-height;
+      margin: ($btn-padding-y * -1) $spacer-xs ($btn-padding-y * -1) 0;
+
+      &:empty {
+        display: none;
+      }
     }
 
     .select2-arrow {
@@ -39,8 +87,6 @@
         background-color: transparent;
         background-image: none;
         height: auto;
-        margin-left: $spacer-xs;
-        width: $btn-font-size;
 
         &::before {
           @extend %material-icons;
@@ -50,6 +96,10 @@
       }
     }
   }
+}
+
+.select2-default {
+  color: $btn-color !important;
 }
 
 .select2-drop {
