--- a/scss/common.scss
+++ b/scss/common.scss
@@ -15,6 +15,7 @@
 // - Dropdown
 // - Form
 //   - Auto complete
+//   - Colour picker
 //   - D editor
 //   - Select2
 // - Header
@@ -46,6 +47,7 @@
 @import 'common/dropdown';
 @import 'common/form';
 @import 'common/form-auto-complete';
+@import 'common/form-color-picker';
 @import 'common/form-d-editor';
 @import 'common/form-select2';
 @import 'common/header';
