--- a/scss/common/_form-auto-complete.scss
+++ b/scss/common/_form-auto-complete.scss
@@ -111,6 +111,7 @@ div.ac-wrap {
       }
 
       .avatar {
+        flex-shrink: 0;
         margin-right: ($dropdown-inner-spacer-x / 2);
       }
     }
