--- a/scss/common/_form.scss
+++ b/scss/common/_form.scss
@@ -95,6 +95,10 @@ textarea {
   }
 }
 
+.form-horizontal .group-flair-inputs .group-flair-right {
+  margin-left: $spacer;
+}
+
 .form-vertical {
   body & {
 
